--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,9 +1,10 @@
 body > header {
   height: 400px;
   width: 100%;
+  margin-top: 120px;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: cornflowerblue;
-background-image: url("https://www.transparenttextures.com/patterns/escheresque.png");
+  background-image: url("https://www.transparenttextures.com/patterns/escheresque.png");
 }
