--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -34,5 +34,15 @@
 
 .new-tweet .invalid {
   color: red;
+}
 
+.new-tweet .alert{
+  color: red;
+  border-style: solid;
+  border-width: thick;
+  border-color: red;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  padding: 1em;
+  display: none;
 }
