--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -5,6 +5,18 @@ body > header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   background-color: cornflowerblue;
   background-image: url("https://www.transparenttextures.com/patterns/escheresque.png");
+  padding: 1em 0em 1em 0em;
+}
+
+@media only screen and (min-width: 1024px) {
+  /* desktop */
+  body > header {
+    margin-left: 4em;
+    margin-right: 4em;
+    margin-top: 170px;
+    width: 50%;
+  }
 }
