--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -3,9 +3,11 @@
  * https://css-tricks.com/international-box-sizing-awareness-day/
  * Do not modify these two selectors, please
  */
+
 html {
   box-sizing: border-box;
 }
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
@@ -24,11 +26,23 @@ body {
   align-items: center;
 }
 
-
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
 
- main {
-   width: 90%;
- }
+main {
+  width: 90%;
+}
+
+@media only screen and (min-width: 1024px) {
+  /* desktop */
+  body {
+    flex-direction: row;
+    align-items: start;
+  }
+
+  main {
+    margin-top: 120px;
+    padding-right: 2em;
+  }
+}
