--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,21 +26,16 @@ body {
   align-items: center;
 }
 
-/*
- * Additional CSS can be defined below or in other CSS files, as per instructions
- */
-
 main {
   width: 90%;
 }
 
+/* desktop styles */
 @media only screen and (min-width: 1024px) {
-  /* desktop */
   body {
     flex-direction: row;
     align-items: start;
   }
-
   main {
     margin-top: 120px;
     padding-right: 2em;
